[ADDED] final version of index & app

--- a/index.html
+++ b/index.html
@@ -5,8 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>IS445 HW3</title>
+    <script src="app.js" defer></script>
 </head>
 <body>
-    <p>HEY</p>
+    <h1>JavaScript Homework</h1>
+    <h2>The program output</h2>
+    <hr>
+    <div id="error" style="display: none;">
+        <p>Invalid integer input, please reload and try again.</p>
+    </div>
+    <div id="error2" style="display: none;">
+        <p>Invalid step value, please reload and try again.</p>
+    </div>
+    <div id="result" style="display: none;">
+        <p id="array">The generated array is </p>
+        <p id="sum">The sum is </p>
+        <p id="binary">The binary of absolut element values are: </p>
+    </div>
+    <hr>
 </body>
 </html>
